--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -8,7 +8,7 @@
       <TargetFileExt Value=".exe"/>
       <Title Value="KaM_Remake"/>
       <UseXPManifest Value="True"/>
-      <ActiveEditorIndexAtStart Value="12"/>
+      <ActiveEditorIndexAtStart Value="17"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -39,8 +39,8 @@
         <UnitName Value="KaM_Remake"/>
         <CursorPos X="101" Y="13"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="9"/>
-        <UsageCount Value="61"/>
+        <EditorIndex Value="11"/>
+        <UsageCount Value="62"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit0>
@@ -53,8 +53,8 @@
         <UnitName Value="KM_Unit1"/>
         <CursorPos X="1" Y="9"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="20"/>
-        <UsageCount Value="59"/>
+        <EditorIndex Value="22"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit1>
@@ -75,7 +75,7 @@
         <CursorPos X="74" Y="735"/>
         <TopLine Value="722"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit3>
@@ -108,7 +108,7 @@
         <UnitName Value="KM_TGATexture"/>
         <CursorPos X="22" Y="66"/>
         <TopLine Value="48"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit7>
       <Unit8>
@@ -125,8 +125,8 @@
         <UnitName Value="KM_CommonTypes"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="19"/>
-        <UsageCount Value="59"/>
+        <EditorIndex Value="21"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit9>
@@ -142,7 +142,7 @@
         <UnitName Value="KM_UnitActionGoInOut"/>
         <CursorPos X="30" Y="3"/>
         <TopLine Value="1"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit11>
       <Unit12>
@@ -151,8 +151,8 @@
         <UnitName Value="KM_UnitActionStay"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="18"/>
-        <UsageCount Value="59"/>
+        <EditorIndex Value="20"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit12>
@@ -163,7 +163,7 @@
         <CursorPos X="38" Y="74"/>
         <TopLine Value="53"/>
         <EditorIndex Value="4"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit13>
@@ -171,10 +171,10 @@
         <Filename Value="KM_Units.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Units"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="15"/>
-        <UsageCount Value="59"/>
+        <CursorPos X="1" Y="1743"/>
+        <TopLine Value="1726"/>
+        <EditorIndex Value="17"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit14>
@@ -184,7 +184,7 @@
         <UnitName Value="KM_Units_WorkPlan"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit15>
       <Unit16>
@@ -193,7 +193,7 @@
         <UnitName Value="KM_UnitTaskDelivery"/>
         <CursorPos X="47" Y="29"/>
         <TopLine Value="18"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit16>
       <Unit17>
@@ -202,8 +202,8 @@
         <UnitName Value="KM_Utils"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="16"/>
-        <UsageCount Value="59"/>
+        <EditorIndex Value="18"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit17>
@@ -219,10 +219,10 @@
         <Filename Value="KM_Controls.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Controls"/>
-        <CursorPos X="1" Y="5"/>
+        <CursorPos X="32" Y="6"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="12"/>
-        <UsageCount Value="59"/>
+        <EditorIndex Value="14"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit19>
@@ -230,19 +230,21 @@
         <Filename Value="KM_Defaults.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Defaults"/>
-        <CursorPos X="38" Y="33"/>
-        <TopLine Value="23"/>
-        <UsageCount Value="59"/>
+        <CursorPos X="25" Y="48"/>
+        <TopLine Value="26"/>
+        <EditorIndex Value="7"/>
+        <UsageCount Value="60"/>
+        <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit20>
       <Unit21>
         <Filename Value="KM_DeliverQueue.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_DeliverQueue"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="13"/>
-        <UsageCount Value="59"/>
+        <CursorPos X="4" Y="231"/>
+        <TopLine Value="213"/>
+        <EditorIndex Value="15"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit21>
@@ -255,7 +257,7 @@
         <UnitName Value="KM_Form_Loading"/>
         <CursorPos X="37" Y="10"/>
         <TopLine Value="3"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit22>
       <Unit23>
@@ -265,7 +267,7 @@
         <CursorPos X="17" Y="625"/>
         <TopLine Value="613"/>
         <EditorIndex Value="2"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit23>
@@ -275,8 +277,8 @@
         <UnitName Value="KM_Houses"/>
         <CursorPos X="5" Y="802"/>
         <TopLine Value="784"/>
-        <EditorIndex Value="6"/>
-        <UsageCount Value="59"/>
+        <EditorIndex Value="8"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit24>
@@ -284,10 +286,10 @@
         <Filename Value="KM_InterfaceGamePlay.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_InterfaceGamePlay"/>
-        <CursorPos X="56" Y="17"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="7"/>
-        <UsageCount Value="59"/>
+        <CursorPos X="34" Y="674"/>
+        <TopLine Value="656"/>
+        <EditorIndex Value="9"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit25>
@@ -295,10 +297,10 @@
         <Filename Value="KM_InterfaceMainMenu.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_InterfaceMainMenu"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="8"/>
-        <UsageCount Value="59"/>
+        <CursorPos X="1" Y="712"/>
+        <TopLine Value="694"/>
+        <EditorIndex Value="10"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit26>
@@ -308,8 +310,8 @@
         <UnitName Value="KM_InterfaceMapEditor"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="10"/>
-        <UsageCount Value="59"/>
+        <EditorIndex Value="12"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit27>
@@ -319,8 +321,8 @@
         <UnitName Value="KM_LoadDAT"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="11"/>
-        <UsageCount Value="59"/>
+        <EditorIndex Value="13"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit28>
@@ -328,9 +330,11 @@
         <Filename Value="KM_LoadLib.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_LoadLib"/>
-        <CursorPos X="25" Y="60"/>
-        <TopLine Value="48"/>
-        <UsageCount Value="59"/>
+        <CursorPos X="93" Y="113"/>
+        <TopLine Value="100"/>
+        <EditorIndex Value="6"/>
+        <UsageCount Value="60"/>
+        <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit29>
       <Unit30>
@@ -340,7 +344,7 @@
         <CursorPos X="6" Y="3"/>
         <TopLine Value="1"/>
         <EditorIndex Value="3"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit30>
@@ -350,8 +354,8 @@
         <UnitName Value="KM_Player"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="14"/>
-        <UsageCount Value="59"/>
+        <EditorIndex Value="16"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit31>
@@ -361,7 +365,7 @@
         <UnitName Value="KM_PlayerAI"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit32>
       <Unit33>
@@ -370,7 +374,7 @@
         <UnitName Value="KM_PlayersCollection"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit33>
       <Unit34>
@@ -379,7 +383,7 @@
         <UnitName Value="KM_RenderUI"/>
         <CursorPos X="13" Y="463"/>
         <TopLine Value="448"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit34>
       <Unit35>
@@ -388,7 +392,7 @@
         <UnitName Value="KM_ResourceGFX"/>
         <CursorPos X="15" Y="1147"/>
         <TopLine Value="1128"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit35>
       <Unit36>
@@ -397,7 +401,7 @@
         <UnitName Value="KM_Settings"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit36>
       <Unit37>
@@ -406,8 +410,8 @@
         <UnitName Value="KM_SoundFX"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="17"/>
-        <UsageCount Value="59"/>
+        <EditorIndex Value="19"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit37>
@@ -415,10 +419,10 @@
         <Filename Value="KM_Terrain.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Terrain"/>
-        <CursorPos X="5" Y="1630"/>
-        <TopLine Value="1612"/>
+        <CursorPos X="1" Y="1667"/>
+        <TopLine Value="1649"/>
         <EditorIndex Value="5"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit38>
@@ -521,7 +525,7 @@
         <IsPartOfProject Value="True"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="55"/>
+        <UsageCount Value="56"/>
         <SyntaxHighlighter Value="LFM"/>
       </Unit52>
       <Unit53>
@@ -594,123 +598,127 @@
         <SyntaxHighlighter Value="Delphi"/>
       </Unit62>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="KM_Terrain.pas"/>
-        <Caret Line="1894" Column="14" TopLine="1893"/>
+        <Filename Value="KM_DeliverQueue.pas"/>
+        <Caret Line="436" Column="1" TopLine="418"/>
       </Position1>
       <Position2>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="267" Column="37" TopLine="249"/>
+        <Filename Value="KM_DeliverQueue.pas"/>
+        <Caret Line="52" Column="15" TopLine="36"/>
       </Position2>
       <Position3>
-        <Filename Value="KM_Game.pas"/>
-        <Caret Line="660" Column="25" TopLine="649"/>
+        <Filename Value="KM_Player.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
       </Position3>
       <Position4>
-        <Filename Value="KM_InterfaceGamePlay.pas"/>
-        <Caret Line="287" Column="1" TopLine="268"/>
+        <Filename Value="KM_DeliverQueue.pas"/>
+        <Caret Line="846" Column="1" TopLine="831"/>
       </Position4>
       <Position5>
         <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="235" Column="3" TopLine="217"/>
+        <Caret Line="111" Column="15" TopLine="105"/>
       </Position5>
       <Position6>
-        <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="476" Column="29" TopLine="459"/>
-      </Position6>
-      <Position7>
-        <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="469" Column="13" TopLine="456"/>
-      </Position7>
-      <Position8>
-        <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="436" Column="1" TopLine="418"/>
-      </Position8>
-      <Position9>
-        <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="52" Column="15" TopLine="36"/>
-      </Position9>
-      <Position10>
-        <Filename Value="KM_Player.pas"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
-      </Position10>
-      <Position11>
-        <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="846" Column="1" TopLine="831"/>
-      </Position11>
-      <Position12>
-        <Filename Value="KM_DeliverQueue.pas"/>
-        <Caret Line="111" Column="15" TopLine="105"/>
-      </Position12>
-      <Position13>
         <Filename Value="KM_Unit1.pas"/>
         <Caret Line="651" Column="5" TopLine="648"/>
-      </Position13>
-      <Position14>
+      </Position6>
+      <Position7>
         <Filename Value="KM_Unit1.pas"/>
         <Caret Line="74" Column="106" TopLine="71"/>
-      </Position14>
-      <Position15>
+      </Position7>
+      <Position8>
         <Filename Value="KM_CommonTypes.pas"/>
         <Caret Line="213" Column="46" TopLine="203"/>
-      </Position15>
-      <Position16>
+      </Position8>
+      <Position9>
         <Filename Value="KM_UnitActionStay.pas"/>
         <Caret Line="30" Column="27" TopLine="26"/>
-      </Position16>
-      <Position17>
+      </Position9>
+      <Position10>
         <Filename Value="KM_SoundFX.pas"/>
         <Caret Line="346" Column="3" TopLine="330"/>
-      </Position17>
-      <Position18>
+      </Position10>
+      <Position11>
         <Filename Value="KM_Utils.pas"/>
         <Caret Line="95" Column="28" TopLine="82"/>
-      </Position18>
-      <Position19>
+      </Position11>
+      <Position12>
         <Filename Value="KM_Units.pas"/>
         <Caret Line="1744" Column="3" TopLine="1726"/>
-      </Position19>
-      <Position20>
+      </Position12>
+      <Position13>
         <Filename Value="KM_Player.pas"/>
         <Caret Line="422" Column="23" TopLine="406"/>
-      </Position20>
-      <Position21>
+      </Position13>
+      <Position14>
         <Filename Value="KM_DeliverQueue.pas"/>
         <Caret Line="860" Column="1" TopLine="827"/>
+      </Position14>
+      <Position15>
+        <Filename Value="KM_Controls.pas"/>
+        <Caret Line="266" Column="67" TopLine="250"/>
+      </Position15>
+      <Position16>
+        <Filename Value="KM_LoadDAT.pas"/>
+        <Caret Line="148" Column="35" TopLine="144"/>
+      </Position16>
+      <Position17>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="814" Column="5" TopLine="796"/>
+      </Position17>
+      <Position18>
+        <Filename Value="KM_InterfaceMainMenu.pas"/>
+        <Caret Line="710" Column="1" TopLine="692"/>
+      </Position18>
+      <Position19>
+        <Filename Value="KaM_Remake.dpr"/>
+        <Caret Line="26" Column="54" TopLine="13"/>
+      </Position19>
+      <Position20>
+        <Filename Value="KM_Controls.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
+      </Position20>
+      <Position21>
+        <Filename Value="KM_Controls.pas"/>
+        <Caret Line="268" Column="1" TopLine="250"/>
       </Position21>
       <Position22>
         <Filename Value="KM_Controls.pas"/>
-        <Caret Line="266" Column="67" TopLine="250"/>
+        <Caret Line="1122" Column="24" TopLine="1110"/>
       </Position22>
       <Position23>
-        <Filename Value="KM_LoadDAT.pas"/>
-        <Caret Line="148" Column="35" TopLine="144"/>
+        <Filename Value="KM_Terrain.pas"/>
+        <Caret Line="1630" Column="5" TopLine="1612"/>
       </Position23>
       <Position24>
-        <Filename Value="KM_InterfaceMapEditor.pas"/>
-        <Caret Line="814" Column="5" TopLine="796"/>
+        <Filename Value="KM_Terrain.pas"/>
+        <Caret Line="654" Column="36" TopLine="643"/>
       </Position24>
       <Position25>
-        <Filename Value="KM_InterfaceMainMenu.pas"/>
-        <Caret Line="710" Column="1" TopLine="692"/>
+        <Filename Value="KM_LoadLib.pas"/>
+        <Caret Line="60" Column="25" TopLine="48"/>
       </Position25>
       <Position26>
-        <Filename Value="KaM_Remake.dpr"/>
-        <Caret Line="26" Column="54" TopLine="13"/>
+        <Filename Value="KM_InterfaceMainMenu.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
       </Position26>
       <Position27>
-        <Filename Value="KM_Controls.pas"/>
-        <Caret Line="1" Column="1" TopLine="1"/>
+        <Filename Value="KM_InterfaceGamePlay.pas"/>
+        <Caret Line="17" Column="56" TopLine="1"/>
       </Position27>
       <Position28>
-        <Filename Value="KM_Controls.pas"/>
-        <Caret Line="268" Column="1" TopLine="250"/>
+        <Filename Value="KM_InterfaceGamePlay.pas"/>
+        <Caret Line="567" Column="84" TopLine="547"/>
       </Position28>
       <Position29>
-        <Filename Value="KM_Controls.pas"/>
-        <Caret Line="1122" Column="24" TopLine="1110"/>
+        <Filename Value="KM_DeliverQueue.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
       </Position29>
+      <Position30>
+        <Filename Value="KM_Units.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
