--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -37,7 +37,7 @@
         <Filename Value="KaM_Remake.dpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KaM_Remake"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="12"/>
         <WindowIndex Value="0"/>
         <TopLine Value="30"/>
         <CursorPos X="19" Y="48"/>
@@ -53,11 +53,13 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="KM_Unit1"/>
+        <EditorIndex Value="10"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="23" Y="13"/>
+        <TopLine Value="305"/>
+        <CursorPos X="11" Y="325"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit1>
       <Unit2>
@@ -74,11 +76,13 @@
         <Filename Value="KM_Render.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Render"/>
+        <EditorIndex Value="9"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="51"/>
-        <CursorPos X="27" Y="65"/>
+        <TopLine Value="35"/>
+        <CursorPos X="10" Y="67"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit3>
       <Unit4>
@@ -114,7 +118,7 @@
         <Filename Value="KM_CommonTypes.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_CommonTypes"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="11"/>
         <WindowIndex Value="0"/>
         <TopLine Value="65"/>
         <CursorPos X="16" Y="73"/>
@@ -210,28 +214,30 @@
         <TopLine Value="23"/>
         <CursorPos X="49" Y="37"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="130"/>
+        <UsageCount Value="131"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit16>
       <Unit17>
         <Filename Value="KM_Controls.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Controls"/>
+        <EditorIndex Value="1"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="18"/>
-        <CursorPos X="102" Y="24"/>
+        <TopLine Value="258"/>
+        <CursorPos X="1" Y="275"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit17>
       <Unit18>
         <Filename Value="KM_Defaults.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Defaults"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="3"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="267"/>
-        <CursorPos X="28" Y="285"/>
+        <TopLine Value="107"/>
+        <CursorPos X="22" Y="117"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -264,11 +270,13 @@
         <Filename Value="KM_Game.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Game"/>
+        <EditorIndex Value="5"/>
         <WindowIndex Value="0"/>
         <TopLine Value="94"/>
-        <CursorPos X="44" Y="96"/>
+        <CursorPos X="1" Y="108"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit21>
       <Unit22>
@@ -277,8 +285,8 @@
         <UnitName Value="KM_Houses"/>
         <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="63"/>
-        <CursorPos X="75" Y="81"/>
+        <TopLine Value="1630"/>
+        <CursorPos X="23" Y="1642"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -310,10 +318,14 @@
         <Filename Value="KM_InterfaceMapEditor.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_InterfaceMapEditor"/>
-        <TopLine Value="141"/>
-        <CursorPos X="34" Y="146"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="6"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="218"/>
+        <CursorPos X="61" Y="240"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit25>
       <Unit26>
@@ -424,11 +436,13 @@
         <Filename Value="KM_Terrain.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Terrain"/>
+        <EditorIndex Value="4"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="2130"/>
-        <CursorPos X="15" Y="2154"/>
+        <TopLine Value="1533"/>
+        <CursorPos X="35" Y="1545"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit36>
       <Unit37>
@@ -493,7 +507,7 @@
       <Unit44>
         <Filename Value="KaM_Remake.lpr"/>
         <UnitName Value="KaM_Remake"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="13"/>
         <WindowIndex Value="0"/>
         <TopLine Value="30"/>
         <CursorPos X="37" Y="38"/>
@@ -742,23 +756,22 @@
         <Filename Value="KM_Units_Warrior.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Units_Warrior"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="2"/>
         <WindowIndex Value="0"/>
         <TopLine Value="184"/>
         <CursorPos X="11" Y="190"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="31"/>
+        <UsageCount Value="32"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit74>
       <Unit75>
         <Filename Value="KM_UnitTask_Build.pas"/>
         <UnitName Value="KM_UnitTask_Build"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="8"/>
         <WindowIndex Value="0"/>
         <TopLine Value="761"/>
-        <CursorPos X="25" Y="793"/>
+        <CursorPos X="46" Y="766"/>
         <SyntaxHighlighter Value="Delphi"/>
         <UsageCount Value="10"/>
         <Loaded Value="True"/>
@@ -798,12 +811,12 @@
         <Filename Value="KM_UnitTaskAttackHouse.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_UnitTaskAttackHouse"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="7"/>
         <WindowIndex Value="0"/>
         <TopLine Value="14"/>
         <CursorPos X="22" Y="27"/>
         <SyntaxHighlighter Value="Delphi"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="23"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit80>
@@ -883,127 +896,123 @@
         <DefaultSyntaxHighlighter Value="Text"/>
       </Unit88>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="KM_UnitTask_Build.pas"/>
-        <Caret Line="554" Column="6" TopLine="535"/>
+        <Caret Line="682" Column="1" TopLine="662"/>
       </Position1>
       <Position2>
-        <Filename Value="KM_UnitTask_Build.pas"/>
-        <Caret Line="65" Column="24" TopLine="47"/>
-      </Position2>
-      <Position3>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="110" Column="1" TopLine="81"/>
-      </Position3>
-      <Position4>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="533" Column="1" TopLine="516"/>
-      </Position4>
-      <Position5>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="589" Column="9" TopLine="577"/>
-      </Position5>
-      <Position6>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="89" Column="29" TopLine="70"/>
-      </Position6>
-      <Position7>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="457" Column="1" TopLine="439"/>
-      </Position7>
-      <Position8>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="507" Column="19" TopLine="489"/>
-      </Position8>
-      <Position9>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="98" Column="34" TopLine="77"/>
-      </Position9>
-      <Position10>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="543" Column="1" TopLine="525"/>
-      </Position10>
-      <Position11>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="457" Column="1" TopLine="439"/>
-      </Position11>
-      <Position12>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="507" Column="1" TopLine="489"/>
-      </Position12>
-      <Position13>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="484" Column="1" TopLine="466"/>
-      </Position13>
-      <Position14>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="114" Column="1" TopLine="79"/>
-      </Position14>
-      <Position15>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="602" Column="11" TopLine="578"/>
-      </Position15>
-      <Position16>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="108" Column="15" TopLine="90"/>
-      </Position16>
-      <Position17>
-        <Filename Value="KM_CommonTypes.pas"/>
-        <Caret Line="614" Column="5" TopLine="579"/>
-      </Position17>
-      <Position18>
-        <Filename Value="KM_UnitTask_Build.pas"/>
-        <Caret Line="554" Column="11" TopLine="542"/>
-      </Position18>
-      <Position19>
-        <Filename Value="KM_UnitTask_Build.pas"/>
-        <Caret Line="545" Column="9" TopLine="536"/>
-      </Position19>
-      <Position20>
-        <Filename Value="KM_UnitTask_Build.pas"/>
-        <Caret Line="590" Column="28" TopLine="572"/>
-      </Position20>
-      <Position21>
-        <Filename Value="KM_UnitTask_Build.pas"/>
-        <Caret Line="625" Column="42" TopLine="593"/>
-      </Position21>
-      <Position22>
-        <Filename Value="KM_UnitTask_Build.pas"/>
-        <Caret Line="592" Column="67" TopLine="574"/>
-      </Position22>
-      <Position23>
-        <Filename Value="KM_UnitTask_Build.pas"/>
-        <Caret Line="639" Column="46" TopLine="616"/>
-      </Position23>
-      <Position24>
-        <Filename Value="KM_UnitTask_Build.pas"/>
-        <Caret Line="682" Column="1" TopLine="662"/>
-      </Position24>
-      <Position25>
         <Filename Value="KM_Houses.pas"/>
         <Caret Line="81" Column="75" TopLine="63"/>
-      </Position25>
-      <Position26>
+      </Position2>
+      <Position3>
         <Filename Value="KM_UnitTask_Build.pas"/>
         <Caret Line="687" Column="1" TopLine="681"/>
-      </Position26>
-      <Position27>
+      </Position3>
+      <Position4>
         <Filename Value="KM_UnitTask_Build.pas"/>
         <Caret Line="692" Column="1" TopLine="674"/>
-      </Position27>
-      <Position28>
+      </Position4>
+      <Position5>
         <Filename Value="KM_UnitTask_Build.pas"/>
         <Caret Line="710" Column="25" TopLine="690"/>
-      </Position28>
-      <Position29>
+      </Position5>
+      <Position6>
         <Filename Value="KM_UnitTask_Build.pas"/>
         <Caret Line="747" Column="40" TopLine="722"/>
-      </Position29>
-      <Position30>
+      </Position6>
+      <Position7>
         <Filename Value="KM_UnitTask_Build.pas"/>
         <Caret Line="756" Column="46" TopLine="748"/>
-      </Position30>
+      </Position7>
+      <Position8>
+        <Filename Value="KM_Render.pas"/>
+        <Caret Line="65" Column="21" TopLine="48"/>
+      </Position8>
+      <Position9>
+        <Filename Value="KM_Render.pas"/>
+        <Caret Line="214" Column="1" TopLine="198"/>
+      </Position9>
+      <Position10>
+        <Filename Value="KM_Unit1.pas"/>
+        <Caret Line="13" Column="23" TopLine="1"/>
+      </Position10>
+      <Position11>
+        <Filename Value="KM_Houses.pas"/>
+        <Caret Line="81" Column="75" TopLine="63"/>
+      </Position11>
+      <Position12>
+        <Filename Value="KM_Houses.pas"/>
+        <Caret Line="1262" Column="37" TopLine="1245"/>
+      </Position12>
+      <Position13>
+        <Filename Value="KM_Controls.pas"/>
+        <Caret Line="24" Column="102" TopLine="18"/>
+      </Position13>
+      <Position14>
+        <Filename Value="KM_Defaults.pas"/>
+        <Caret Line="285" Column="28" TopLine="267"/>
+      </Position14>
+      <Position15>
+        <Filename Value="KM_Defaults.pas"/>
+        <Caret Line="117" Column="22" TopLine="107"/>
+      </Position15>
+      <Position16>
+        <Filename Value="KM_Game.pas"/>
+        <Caret Line="96" Column="44" TopLine="94"/>
+      </Position16>
+      <Position17>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="146" Column="34" TopLine="141"/>
+      </Position17>
+      <Position18>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="623" Column="1" TopLine="606"/>
+      </Position18>
+      <Position19>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="1005" Column="17" TopLine="990"/>
+      </Position19>
+      <Position20>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="1002" Column="25" TopLine="987"/>
+      </Position20>
+      <Position21>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="59" Column="21" TopLine="42"/>
+      </Position21>
+      <Position22>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="618" Column="32" TopLine="596"/>
+      </Position22>
+      <Position23>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="240" Column="39" TopLine="223"/>
+      </Position23>
+      <Position24>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="1" Column="1" TopLine="1"/>
+      </Position24>
+      <Position25>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="59" Column="24" TopLine="42"/>
+      </Position25>
+      <Position26>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="613" Column="20" TopLine="596"/>
+      </Position26>
+      <Position27>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="617" Column="20" TopLine="596"/>
+      </Position27>
+      <Position28>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="997" Column="20" TopLine="980"/>
+      </Position28>
+      <Position29>
+        <Filename Value="KM_InterfaceMapEditor.pas"/>
+        <Caret Line="1002" Column="20" TopLine="980"/>
+      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
